fix/style: correct overflow bug on virtual mobil

--- a/src/ui/components/virtualMobile/virtualMobile.scss
+++ b/src/ui/components/virtualMobile/virtualMobile.scss
@@ -6,8 +6,9 @@
 
   .wvh-app {
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     position: absolute;
+    transform: translate(0);
     width: 100%;
   }
 }
